# pmacs-utils

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  QUALITY.md  README.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml
assets/macos/: Info.plist
docs/: MAC.md  WINDOWS.md  auth-flow-investigation.md  handoff-p1.md  implementation-checklist.md  macos-ux-plan.md  native-gp-implementation-plan.md  pmacs-environment.md  rust-claude-guide.md  testing-guide.md  vpn-slice-analysis.md  windows-shortcut.md
examples/: credui_probe.rs
handoffs/: handoff-2026-01-02T1030.md  handoff-2026-01-03-macos-testing.md  handoff-2026-01-03-windows-complete.md
scripts/: build-macos-app.sh  connect.ps1  connect.sh  create-shortcuts.ps1  disconnect.ps1  disconnect.sh  quality-gate.sh  setup.sh  status.ps1  status.sh  tray.ps1  tray.sh  windows-install.ps1
scripts/tests/: windows-install.Tests.ps1
src/: config.rs  connection_phase.rs  credentials.rs  launchd.rs  lib.rs  macos_permissions.rs  main.rs  notifications.rs  singleton.rs  startup.rs  state.rs  tray.rs
src/dialog/: linux.rs  mac.rs  mod.rs  windows.rs
src/gp/: auth.rs  mod.rs  packet.rs  tun.rs  tunnel.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/openconnect/: env.rs  mod.rs  script.rs
src/platform/: linux.rs  mac.rs  mod.rs  windows.rs
src/vpn/: hosts.rs  mod.rs  routing.rs
ssh/: config.example  setup.sh
tests/: hardening_acceptance.rs  launchd_daemon_env_acceptance.rs  tunnel_hardening_acceptance.rs
